--- a/fullstack/saas-template.mdx
+++ b/fullstack/saas-template.mdx
@@ -13,7 +13,7 @@ This app uses the power of the `create-shuttle-app` utility which you can find m
 In order to get started, simply run this command:
 
 ```
-    npx create-shuttle-app --fullstack-examples saas
+npx create-shuttle-app --fullstack-example saas
 ```
 
 In order to deploy your project, follow these steps:
