--- a/tutorials/databases-with-rust.mdx
+++ b/tutorials/databases-with-rust.mdx
@@ -53,7 +53,7 @@ At a basic level, we can use `sqlx::query` to query something and then chain the
 
 ```rust
 // fetch one row
-let query = sqlx::query("SELECT * FROM users WHERE id = $1)
+let query = sqlx::query("SELECT * FROM users WHERE id = $1")
     .bind(id)
     .fetch_one(&pool)
     .await;
