--- a/migration/migrating-to-shuttle.mdx
+++ b/migration/migrating-to-shuttle.mdx
@@ -94,7 +94,7 @@ name="<app-name-here>"
 Now all you need to do is to run the following commands:
 
 ```bash
-cargo shuttle project new
+cargo shuttle project start
 cargo shuttle project deploy
 ```
 
