--- a/resources/shuttle-secrets.mdx
+++ b/resources/shuttle-secrets.mdx
@@ -6,7 +6,7 @@ This plugin manages secrets on [Shuttle](https://www.shuttle.rs).
 
 ## Usage
 Add `shuttle-secrets` to the dependencies for your service, and add a `Secrets.toml` to the root of your project
-with the secrets you'd like to store. Make sure to add `Secrets.toml` to a `.gitignore` to omit your secrets from version control.
+with the secrets you'd like to store. Make sure to add `Secrets*.toml` to a `.gitignore` to omit your secrets from version control.
 
 The format of the Secrets.toml file is a key-value mapping with string values.
 
@@ -50,3 +50,11 @@ async fn rocket(
 ```
 
 The full example can be found on [GitHub](https://github.com/shuttle-hq/shuttle-examples/tree/main/rocket/secrets)
+
+## Caveats
+
+- Shuttle does not yet support setting environment variables at build time.
+- Some libraries read from their own config files or environment variables,
+  with no way of providing them in code. Sometimes, this can be solved by
+  manually setting the variable after loading the secret (and before loading the library):
+  `std::env::set_var("SOME_ENV_VAR", my_secret);`
