--- a/resources/shuttle-persist.mdx
+++ b/resources/shuttle-persist.mdx
@@ -5,9 +5,7 @@ title: "Shuttle Persist"
 This plugin allows persisting struct that implement `serde::Serialize` and loading them again using `serde::Deserialize`.
 
 ## Usage
-Add `shuttle-persist` to the dependencies for your service with `cargo add shuttle-persist`. You can get this resource
-using the `shuttle-persist::Persist` attribute to get a `PersistInstance`. Objects can now be saved using
-`PersistInstance.save()` and loaded again using `PersistInstance.load()`.
+Add `shuttle-persist` to the dependencies for your service with `cargo add shuttle-persist`. You can get this resource using the `shuttle-persist::Persist` attribute to get a `PersistInstance`. Objects can now be saved using `PersistInstance.save()` and loaded again using `PersistInstance.load()`.
 
 ## Example
 This snippet shows a Shuttle rocket main function that uses the `shuttle_persist::Persist` attribute to provision and get access to a `PersistInstance`.
