--- a/introduction/local-run.mdx
+++ b/introduction/local-run.mdx
@@ -15,7 +15,7 @@ cargo shuttle run
 ```
 
 ### Inner development loop
-The power of the inner development loop can be harnassed when developing locally with Shuttle! Leverage `cargo watch` like this:
+The power of the inner development loop can be harnessed when developing locally with Shuttle! Leverage `cargo watch` like this:
 ```bash
 cargo watch -x check -x clippy -x fmt -x test -x 'shuttle run'
 ```
