--- a/examples/actix-hello-world.mdx
+++ b/examples/actix-hello-world.mdx
@@ -49,3 +49,5 @@ tokio = "1.26.0"
 ---
 
 <Tip> If you want to explore other frameworks, we have more examples with popular ones like Tower and Warp. You can find them [right here](../examples/other). </Tip>
+
+<Tip> Be sure to check out the [examples repo](https://github.com/shuttle-hq/shuttle-examples) for many more examples! </Tip>
