--- a/examples/axum-hello-world.mdx
+++ b/examples/axum-hello-world.mdx
@@ -12,6 +12,8 @@ This section revolves around simple Axum examples you can get quickly started wi
 
 <Tip>If you are looking for step-by-step guides, check out our [How To](../tutorials) section.</Tip>
 
+<Tip>If you are looking for step-by-step guides, check out our [How To](../tutorials) section.</Tip>
+
 <CodeGroup>
 ```rust src/main.rs
 use axum::{routing::get, Router};
@@ -45,3 +47,5 @@ tokio = "1.28.2"
 ---
 
 <Tip> If you want to explore other frameworks, we have more examples with popular ones like Tower and Warp. You can find them [right here](../examples/other). </Tip>
+
+<Tip> Be sure to check out the [examples repo](https://github.com/shuttle-hq/shuttle-examples) for many more examples! </Tip>
