--- a/examples/serenity-hello-world.mdx
+++ b/examples/serenity-hello-world.mdx
@@ -101,3 +101,5 @@ tracing = "0.1.37"
 
 ---
 <Tip> If you want to explore other frameworks, we have more examples with popular ones like Tower and Warp. You can find them [right here](../examples/other). </Tip>
+
+<Tip> Be sure to check out the [examples repo](https://github.com/shuttle-hq/shuttle-examples) for many more examples! </Tip>
