--- a/resources/shuttle-static-folder.mdx
+++ b/resources/shuttle-static-folder.mdx
@@ -69,7 +69,7 @@ Then, in order to include the static folder in the final archive, you'll have to
 !static/
 ```
 
-The team is working in a more simple way to support this scenario, but this will do the trick for now.
+The team is working on a simpler solution for this scenario, but for now this work-around is needed.
 
 ### Working with a workspace
 
