--- a/resources/shuttle-persist.mdx
+++ b/resources/shuttle-persist.mdx
@@ -2,13 +2,13 @@
 title: "Shuttle Persist"
 ---
 
-This plugin allows persisting struct that implement `serde::Serialize` and loading them again using `serde::Deserialize`.
+The persist plugin allows data to be persisted in a key-value store, which is backed by a struct type.  The struct implements `serde::Serialize` for serialization (prepare data for saving or transmission) and `serde::Deserialize` for deserialization (load data to memory, either from storage or fetched via the network). The persist plugin is useful for saving and retrieving data when it is not desired to hard code that data into the app.  An example is saved settings for a Discord bot that need to remain the same betwee updates.  State data, used in web frameworks such as Axum and Rocket, is also a good candidate for use of the persist plugin. 
 
 ## Usage
-Add `shuttle-persist` to the dependencies for your service with `cargo add shuttle-persist`. You can get this resource using the `shuttle-persist::Persist` attribute to get a `PersistInstance`. Objects can now be saved using `PersistInstance.save()` and loaded again using `PersistInstance.load()`.
+To use the persist plugin, add `shuttle-persist` to the dependencies of your service with `cargo add shuttle-persist`.  Then, annotate your `shuttle_runtime::main` function by adding the `shuttle-persist::Persist` attribute as a parameter.  This will give a `PersistInstance`. There are two methods available to `PersistInstance`,  `.save()` and `.load()`. Objects can be saved or loaded with these two methods. 
 
 ## Example
-This snippet shows a Shuttle rocket main function that uses the `shuttle_persist::Persist` attribute to provision and get access to a `PersistInstance`.
+This snippet shows a Shuttle rocket main function that uses the `shuttle_persist::Persist` attribute to provision and get access to a `PersistInstance`.  In this example,the `PersistInstance` is used to store state for the app.
 
 ```rust main.rs
 #[shuttle_runtime::main]
