--- a/introduction/installation.mdx
+++ b/introduction/installation.mdx
@@ -27,6 +27,8 @@ Although a bit slower, you can also install directly with cargo:
 cargo install cargo-shuttle
 ```
 
+<Note>If you are using an M1/M2 Mac, `cargo install cargo-shuttle` might not work for you due to an issue with the `cargo generate` upstream dependency. In those cases, it is advised to install Shuttle with `binstall`.</Note>
+
 ### Arch Linux
 
 `cargo-shuttle` can be installed from the [community repository](https://archlinux.org/packages/community/x86_64/cargo-shuttle) using [pacman](https://wiki.archlinux.org/title/Pacman):
